# Iverson

./: .gitignore  .gitlab-ci.yml  Iverson.slnx  LICENSE  README.md
.github/workflows/: codeql.yml  deploy-validate.yml
.superpowers/sdd/: orderby-fix-report.md  task-1-report.md  task-3-report.md  task-4-report.md  task-6-report.md
Iverson.AdminUI/: .env.development  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
Iverson.AdminUI/public/: config.js.template
Iverson.AdminUI/scripts/: generate_protos.sh
Iverson.AdminUI/src/: config.ts  main.tsx  router.test.tsx  router.tsx  telemetry.ts
Iverson.Client/: Iverson.Client.slnx
Iverson.Clients/Python/: pyproject.toml
Iverson.Clients/Python/iverson_client/: __init__.py  annotations.py  auth.py  core.py  group_by.py  pipeline.py  search.py  vector_search.py
Iverson.Clients/Python/sample/: main.py  models.py
Iverson.Clients/Python/scripts/: generate_protos.sh
Iverson.Clients/Python/tests/: test_annotations.py  test_auth.py  test_group_by.py  test_pipeline.py  test_query_builder.py  test_schema_registrar.py  test_vector_search.py
Iverson.Server/: .dockerignore  Iverson.Server.slnx  README.md  docker-compose.yml
docs/: engagement-store-htap-analysis.md  infrastructure-1tb-aws-azure.md  infrastructure-1tb-kubernetes.md  iverson-vs-marten.md  one-query-five-languages.md  pipeline-aggregations-proposal.md  search-dsl.md  tpc-h-candidates.md  user-management-and-security.md
(+645 files in other folders)
