[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "iverson-client"
version = "0.1.0"
description = "Python gRPC client for the Iverson object intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.81.1",
    "protobuf>=5.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "grpcio-tools>=1.81.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["iverson_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
